"Develpment Message Added"

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-    <div class="message">
-        <h2>This page is under progress.</h2>
-    </div>
     <div class="navbar">
         <img src="Images/Lav1(3).png">
         <ul>
@@ -29,6 +26,9 @@
     </div>
 
     <div class="home" id="home">
+        <div class="message">
+            <h2>This website is under development process.</h2>
+        </div>
         <div class="introDiv">
             Hi, I'm <h3>Lav</h3>
             <p>And I'm a
